objects/Room__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_a_lab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has a lab?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Room_type__c</fullName>
        <label>Room type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedulable__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Select this checkbox if the room is used for scheduling purposes.</inlineHelpText>
        <label>Use for Scheduling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rooms</relationshipLabel>
        <relationshipName>Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Max number room can accomodate</description>
        <inlineHelpText>How many students can fit in this room.</inlineHelpText>
        <label>Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Usable?</label>
        <type>Checkbox</type>
    </fields>
    <label>Room</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>